Remove cassandra dependency. Fix docker image